# Easytier

./: CONTRIBUTING.md  CONTRIBUTING_zh.md  Cargo.toml  EasyTier.code-workspace  README.md  README_CN.md  SDWAN.code-workspace  android.nix  flake.nix  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: core.yml  docker.yml  gui.yml  ohos.yml  openwrt.yml  release.yml  test-openwrt-integration.yml  test.yml
openwrt/: README.md
openwrt/luci-app-sdwan/: Makefile
openwrt/sdwan/: Makefile
script/: install.cmd  install.sh
sdwan/: Cargo.toml  build.rs
sdwan-contrib/sdwan-ffi/: Cargo.toml
sdwan-contrib/sdwan-ffi/examples/: csharp.cs
sdwan-contrib/sdwan-magisk/: README.md  action.sh  build.sh  customize.sh  module.prop  sdwan_core.sh  service.sh  uninstall.sh
sdwan-contrib/sdwan-magisk/config/: command_args_sample
sdwan-contrib/sdwan-ohrs/: Cargo.toml
sdwan-contrib/sdwan-uptime/: .env.production  Cargo.toml  README.md  start-dev.sh  start-prod.sh  stop-prod.sh  test-integration.sh
sdwan-contrib/sdwan-uptime/frontend/: package.json
sdwan-gui/: README.md  package.json
sdwan-gui/src/: App.vue  auto-imports.d.ts  main.ts
sdwan-gui/src-tauri/: Cargo.toml  tauri.conf.json
sdwan-gui/src-tauri/src/: lib.rs
sdwan-gui/src/components/: About.vue
sdwan-gui/src/composables/: mobile_vpn.ts  (+2 more)
sdwan-rpc-build/: Cargo.toml  README.md
sdwan-web/: Cargo.toml
sdwan-web/frontend/: index.html
sdwan-web/frontend-lib/: package.json  vite.config.ts
sdwan-web/src/: main.rs
sdwan/src/: launcher.rs  sdwan-cli.rs  sdwan-core.rs  utils.rs
(+31 files in other folders)
