[workspace]
resolver = "2"
members = [
    "sdwan",
    "sdwan-gui/src-tauri",
    "sdwan-rpc-build",
    "sdwan-web",
    "sdwan-contrib/sdwan-ffi",
    "sdwan-contrib/sdwan-uptime",
]
default-members = ["sdwan", "sdwan-web"]
exclude = [
    "sdwan-contrib/sdwan-ohrs", # it needs ohrs sdk
]

[profile.dev]
panic = "unwind"
debug = 2

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true
